--- a/config.json
+++ b/config.json
@@ -56,7 +56,7 @@
     }
   ],
   "defaultSession": {
-    "name": "Apul Feature on Amil",
+    "name": "Apul Features on Amil",
     "view": {
       "id": "linearGenomeView",
       "type": "LinearGenomeView",
