--- a/data/.htaccess
+++ b/data/.htaccess
@@ -1,3 +1,5 @@
-<FilesMatch "\.(fai|fna|fa.gz|gz.fai|gz.gzi|gff|gff3|bed|json|bam|vcf)$">
+<IfModule mod_headers.c>
+  <FilesMatch "\.(fa|fai|fna|gz|gzi|gff|gff3|bed|json|bam|vcf|gtf)$">
     Header set Access-Control-Allow-Origin "*"
-</FilesMatch>
+  </FilesMatch>
+</IfModule>
