--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -6,8 +6,8 @@ website:
   title: "DIVE Platform"
   navbar:
     left:
-      - text: Home
-        file: index.qmd
+      #- text: Home
+      #  file: index.qmd
       - text: About
         file: about.qmd
       - text: Genome Browser
