--- a/docs/jbrowse/config.json
+++ b/docs/jbrowse/config.json
@@ -1,45 +1,63 @@
 {
   "baseUrl": "jbrowse/",
-"assemblies": [
-  {
-    "name": "Amil_v2.1",
-    "sequence": {
-      "type": "ReferenceSequenceTrack",
-      "trackId": "amil_refseq",
-      "adapter": {
-        "type": "IndexedFastaAdapter",
-        "fastaLocation": {
-          "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/data/Apul-vAmil/GCF_013753865.1_Amil_v2.1_genomic.fna"
-        },
-        "faiLocation": {
-          "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/data/Apul-vAmil/GCF_013753865.1_Amil_v2.1_genomic.fna.fai"
+  "assemblies": [
+    {
+      "name": "Amil_v2.1",
+      "sequence": {
+        "type": "ReferenceSequenceTrack",
+        "trackId": "amil_refseq",
+        "adapter": {
+          "type": "IndexedFastaAdapter",
+          "fastaLocation": {
+            "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/docs/jbrowse/data/Apul-vAmil/GCF_013753865.1_Amil_v2.1_genomic.fna"
+          },
+          "faiLocation": {
+            "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/docs/jbrowse/data/Apul-vAmil/GCF_013753865.1_Amil_v2.1_genomic.fna.fai"
+          }
+        }
+      }
+    },
+    {
+      "name": "Peve_v1",
+      "sequence": {
+        "type": "ReferenceSequenceTrack",
+        "trackId": "peve_refseq",
+        "adapter": {
+          "type": "IndexedFastaAdapter",
+          "fastaLocation": {
+            "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/docs/jbrowse/data/Peve/Porites_evermanni_v1.fa"
+          },
+          "faiLocation": {
+            "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/docs/jbrowse/data/Peve/Porites_evermanni_v1.fa.fai"
+          }
+        }
+      }
+    },
+    {
+      "name": "Pmea_v1",
+      "sequence": {
+        "type": "ReferenceSequenceTrack",
+        "trackId": "pmea_refseq",
+        "adapter": {
+          "type": "IndexedFastaAdapter",
+          "fastaLocation": {
+            "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/docs/jbrowse/data/Ptuh-vPmea/Pocillopora_meandrina_HIv1.assembly.fasta"
+          },
+          "faiLocation": {
+            "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/docs/jbrowse/data/Ptuh-vPmea/Pocillopora_meandrina_HIv1.assembly.fasta.fai"
+          }
         }
       }
     }
-  },
-  {
-    "name": "Peve_v1",
-    "sequence": {
-      "type": "ReferenceSequenceTrack",
-      "trackId": "peve_refseq",
-      "adapter": {
-        "type": "IndexedFastaAdapter",
-        "fastaLocation": {
-          "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/data/Peve/Porites_evermanni_v1.fa"
-        },
-        "faiLocation": {
-          "uri": "https://gannet.fish.washington.edu/v1_web/owlshell/bu-github/deep-dive-genome-browser/data/Peve/Porites_evermanni_v1.fa.fai"
-        }
-      }
-    }
-  }
-],
+  ],
   "tracks": [
     {
       "type": "FeatureTrack",
       "trackId": "Apul_miRNAs",
       "name": "Apul miRNAs",
-      "assemblyNames": ["Amil_v2.1"],
+      "assemblyNames": [
+        "Amil_v2.1"
+      ],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -51,7 +69,9 @@
       "type": "FeatureTrack",
       "trackId": "amil_features",
       "name": "Amil Gene Features",
-      "assemblyNames": ["Amil_v2.1"],
+      "assemblyNames": [
+        "Amil_v2.1"
+      ],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -63,7 +83,9 @@
       "type": "FeatureTrack",
       "trackId": "amil_lncRNAs",
       "name": "Apul lncRNAs",
-      "assemblyNames": ["Amil_v2.1"],
+      "assemblyNames": [
+        "Amil_v2.1"
+      ],
       "adapter": {
         "type": "BedAdapter",
         "bedLocation": {
@@ -75,7 +97,9 @@
       "type": "FeatureTrack",
       "trackId": "peve_features",
       "name": "Peve Gene Features",
-      "assemblyNames": ["Peve_v1"],
+      "assemblyNames": [
+        "Peve_v1"
+      ],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -87,7 +111,9 @@
       "type": "FeatureTrack",
       "trackId": "peve_lncRNAs",
       "name": "Peve lncRNAs",
-      "assemblyNames": ["Peve_v1"],
+      "assemblyNames": [
+        "Peve_v1"
+      ],
       "adapter": {
         "type": "BedAdapter",
         "bedLocation": {
@@ -99,11 +125,55 @@
       "type": "FeatureTrack",
       "trackId": "peve_miRNAs",
       "name": "Peve miRNAs",
-      "assemblyNames": ["Peve_v1"],
+      "assemblyNames": [
+        "Peve_v1"
+      ],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
           "uri": "data/Peve/known_miRNAs.gff3"
+        }
+      }
+    },
+    {
+      "type": "FeatureTrack",
+      "trackId": "pmea_features",
+      "name": "Pmea Gene Features",
+      "assemblyNames": [
+        "Pmea_v1"
+      ],
+      "adapter": {
+        "type": "Gff3Adapter",
+        "gffLocation": {
+          "uri": "data/Ptuh-vPmea/Pocillopora_meandrina_HIv1.genes.gff3"
+        }
+      }
+    },
+    {
+      "type": "FeatureTrack",
+      "trackId": "pmea_miRNAs",
+      "name": "Pmea miRNAs",
+      "assemblyNames": [
+        "Pmea_v1"
+      ],
+      "adapter": {
+        "type": "Gff3Adapter",
+        "gffLocation": {
+          "uri": "data/Ptuh-vPmea/known_miRNAs.gff3"
+        }
+      }
+    },
+    {
+      "type": "FeatureTrack",
+      "trackId": "pmea_lncRNAs",
+      "name": "Pmea lncRNAs",
+      "assemblyNames": [
+        "Pmea_v1"
+      ],
+      "adapter": {
+        "type": "BedAdapter",
+        "bedLocation": {
+          "uri": "data/Ptuh-vPmea/Pmea_lncRNA.bed"
         }
       }
     }
