--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -12,7 +12,10 @@ website:
         file: about.qmd
       - text: Genome Browser
         href: jbrowse/index.html  # Relative link to JBrowse's index
-
+    right:
+      - icon: github
+        href: https://github.com/urol-e5/deep-dive-genome-browser
+        aria-label: GitHub
 format:
   html:
     css: styles.css  
