--- a/docs/jbrowse/config.json
+++ b/docs/jbrowse/config.json
@@ -55,9 +55,7 @@
       "type": "FeatureTrack",
       "trackId": "Apul_miRNAs",
       "name": "Apul miRNAs",
-      "assemblyNames": [
-        "Amil_v2.1"
-      ],
+      "assemblyNames": ["Amil_v2.1"],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -69,9 +67,7 @@
       "type": "FeatureTrack",
       "trackId": "amil_features",
       "name": "Amil Gene Features",
-      "assemblyNames": [
-        "Amil_v2.1"
-      ],
+      "assemblyNames": ["Amil_v2.1"],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -83,9 +79,7 @@
       "type": "FeatureTrack",
       "trackId": "amil_lncRNAs",
       "name": "Apul lncRNAs",
-      "assemblyNames": [
-        "Amil_v2.1"
-      ],
+      "assemblyNames": ["Amil_v2.1"],
       "adapter": {
         "type": "BedAdapter",
         "bedLocation": {
@@ -97,9 +91,7 @@
       "type": "FeatureTrack",
       "trackId": "peve_features",
       "name": "Peve Gene Features",
-      "assemblyNames": [
-        "Peve_v1"
-      ],
+      "assemblyNames": ["Peve_v1"],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -111,9 +103,7 @@
       "type": "FeatureTrack",
       "trackId": "peve_lncRNAs",
       "name": "Peve lncRNAs",
-      "assemblyNames": [
-        "Peve_v1"
-      ],
+      "assemblyNames": ["Peve_v1"],
       "adapter": {
         "type": "BedAdapter",
         "bedLocation": {
@@ -125,9 +115,7 @@
       "type": "FeatureTrack",
       "trackId": "peve_miRNAs",
       "name": "Peve miRNAs",
-      "assemblyNames": [
-        "Peve_v1"
-      ],
+      "assemblyNames": ["Peve_v1"],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -139,9 +127,7 @@
       "type": "FeatureTrack",
       "trackId": "pmea_features",
       "name": "Pmea Gene Features",
-      "assemblyNames": [
-        "Pmea_v1"
-      ],
+      "assemblyNames": ["Pmea_v1"],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -153,9 +139,7 @@
       "type": "FeatureTrack",
       "trackId": "pmea_miRNAs",
       "name": "Ptuh miRNAs",
-      "assemblyNames": [
-        "Pmea_v1"
-      ],
+      "assemblyNames": ["Pmea_v1"],
       "adapter": {
         "type": "Gff3Adapter",
         "gffLocation": {
@@ -167,9 +151,7 @@
       "type": "FeatureTrack",
       "trackId": "pmea_lncRNAs",
       "name": "Ptuh lncRNAs",
-      "assemblyNames": [
-        "Pmea_v1"
-      ],
+      "assemblyNames": ["Pmea_v1"],
       "adapter": {
         "type": "BedAdapter",
         "bedLocation": {
@@ -178,16 +160,16 @@
       }
     },
     {
-  "type": "FeatureTrack",
-  "trackId": "pi_clusters",
-  "name": "Apul piRNA Clusters",
-  "assemblyNames": ["Amil_v2.1"],
-  "adapter": {
-    "type": "BEDAdapter",
-    "bedLocation": {
-      "uri": "data/Apul-vAmil/Apul_pi_clusters.bed"
+      "type": "FeatureTrack",
+      "trackId": "pi_clusters",
+      "name": "Apul piRNA Clusters",
+      "assemblyNames": ["Amil_v2.1"],
+      "adapter": {
+        "type": "BedAdapter",
+        "bedLocation": {
+          "uri": "data/Apul-vAmil/Apul_pi_clusters.bed"
+        }
+      }
     }
-  }
-}
   ]
 }
